<resources>
    <string name="app_name">מנהל מכירות</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>
    <string-array name="payments">
        <item>מזומן</item>
        <item>אשראי</item>
        <item>שיק</item>
    </string-array>
    <string-array name="dates">
        <item>יום</item>
        <item>יומיים</item>
        <item>שלושה</item>
    </string-array>
    <string-array name="status">
        <item>לא נבחר</item>
        <item>נשלח לבדיקה</item>
        <item>שולם</item>
        <item>חייב</item>
    </string-array>
    <string-array name="products">
        <item>אתרוג</item>
        <item>לולב</item>
    </string-array>
    <string name="navigation_title">מנהל מכירות</string>
    <string name="navigation_quotes">Quotes</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
    <string name="mobile">טלפון נייד</string>
    <string name="client_details"><u>פרטי הלקוח</u></string>
    <string name="full_name">שם מלא</string>
    <string name="home_phone">טלפון בבית</string>
    <string name="address">כתובת</string>
    <string name="email">אימייל</string>
    <string name="orders"><u>ניהול הזמנות</u></string>
    <string name="neww">חדש</string>
    <string name="notifications"><u>התראות</u></string>
    <string name="hint_password">סיסמא</string>
    <string name="action_sign_in_short">יש לך כבר חשבון? היכנס עכשיו</string>
    <string name="btn_forgot_password">שכחתי סיסמא</string>
    <string name="btn_link_to_login">כניסה</string>
    <string name="enter_email_address">נא הזן אימייל</string>
    <string name="enter_password">נא הזן סיסמא</string>
    <string name="pass_short">מינימום 6 תווים!</string>
    <string name="user_exist">המשתמש כבר קיים</string>
    <string name="failed_auth">האימות נכשל אנא נסה שוב</string>
    <string name="login">כניסה</string>
    <string name="btn_link_to_register">אין לך חשבון? צור כאן</string>
    <string name="create_account">צור חשבון</string>
    <string name="save">שמור</string>
    <string name="fast_order"><u>יצירת הזמנה</u></string>
    <string name="product">מוצר:</string>
    <string name="quantity">כמות:</string>
    <string name="price">מחיר</string>
    <string name="type_quantitiy">הזן כמות</string>
    <string name="order_status">סטטוס מוצר:</string>
    <string name="notes">הערות</string>
    <string name="owe">הזן חוב</string>
    <string name="owe2">חייב</string>
    <string name="insert">הכנס</string>
    <string name="no_connection">שגיאה בחיבור אנא נסה שנית מאוחר יותר!</string>
    <string name="client_details_missing">שם ומספר נייד חובה</string>
    <string name="orders_notification"><u>הזמנות והתראות</u></string>
    <string name="created">נוצר ב:</string>
    <string name="order_details"><u>פרטי הזמנה</u></string>
    <string name="order_created">הזמנה נוצרה ב:</string>
    <string name="notification_at">תאריך איחור ב:</string>
    <string name="max_100">מקסימום 100 מוצרים!</string>
    <string name="total">סה\"כ</string>
    <string name="error_cam">שגיאה בצילום אנא נסה שוב</string>
    <string name="switche">האם ברצונך לצפות בתמונה או לצלם חדש?</string>
    <string name="pht">צלם</string>
    <string name="watch">צפה</string>
    <string name="cheched">נשלח לבדיקה</string>
    <string name="delete">מחק</string>
    <string name="export_pdf">ייצא נתונים לPDF</string>
    <string name="sure_delete">האם אתה בטוח שברצונך למחוק? זה לא ניתן לשחזור!</string>
    <string name="deleted">נמחק</string>
    <string name="default_order">לא נמצאו הזמנות לחץ + ליצירה</string>
    <string name="select">מותאם אישית</string>
    <string name="no_items">לא נמצאו נתונים</string>
    <string name="notif">לא נמצאו התראות ללקוח זה</string>
    <string name="search">שם לקוח או מספר נייד</string>
    <string name="exported">המסמך נוצר בהצלחה</string>
    <string name="due">חוב לתשלום</string>
    <string name="phst">צילום שיק (אופציונאלי)</string>
    <string name="not_no">לא נמצאו התראות עבור לקוח זה</string>
    <string name="visual">מראה</string>
    <string name="welcome">הצג מסך פתיחה</string>
    <string name="send">שליחת שיק ללקוח</string>
    <string name="update">עדכן</string>
    <string name="gen_message">שליחת הודעה כללית</string>
    <string name="order_st">הזמנות ופעולות</string>
    <string name="late">You\'ve passed the time we agreed. Please return the etrog as soon as possible.Thanks Shimon Badush</string>
    <string name="general"><u>פעולות כלליות</u></string>
    <string name="due_late">Hello, you still have a debt of</string>
    <string name="enter_emailb">נא הזן מייל</string>
    <string name="instructions">נשלח לך מייל עם איפוס סיסמא</string>
    <string name="retry">שגיאה אנא נסה שוב</string>
    <string-array name="status_l">
        <item>לא נבחר</item>
        <item>קיבל-שולם</item>
        <item>בהזמנה-שולם</item>
        <item>קיבל-חייב</item>
        <item>בהזמנה-חייב</item>
    </string-array>
</resources>
