<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_trans">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:clickable="true"
        android:background="@color/material_gray1">

        <ImageButton
            android:id="@+id/fragment_orders_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="0dp"
            android:background="@color/theme_primary_light"
            android:src="@drawable/baseline_arrow_back_white_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/layout_border_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/client_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/order_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:theme="@style/MyEditTextTheme"
                        tools:layout_editor_absoluteX="451dp"
                        tools:layout_editor_absoluteY="74dp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/order_address"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:theme="@style/MyEditTextTheme"
                        tools:layout_editor_absoluteX="258dp"
                        tools:layout_editor_absoluteY="76dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/order_mobile"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:theme="@style/MyEditTextTheme"
                        tools:layout_editor_absoluteX="440dp"
                        tools:layout_editor_absoluteY="140dp" />


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/order_email"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:theme="@style/MyEditTextTheme"
                        tools:layout_editor_absoluteX="232dp"
                        tools:layout_editor_absoluteY="142dp" />
                </LinearLayout>
            </LinearLayout>


            <android.support.design.widget.TextInputEditText
                android:id="@+id/order_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/home_phone"
                android:inputType="number"

                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textview2"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_border_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:text="@string/product"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/order_spinner"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:background="@color/material_gray1"
                android:entries="@array/products"
                android:theme="@style/mySpinnerItemStyle"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/order_quantity"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/order_spinner" />

            <ScrollView
                android:id="@+id/ScrollView2"
                android:layout_width="381dp"
                android:layout_height="420dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_quantity">

                <LinearLayout
                    android:id="@+id/fields2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"

                    app:layout_constraintTop_toBottomOf="@+id/order_quantity">

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/product"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/quantity"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/btn"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/theme_primary_light"
                android:text="עדכן"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ScrollView2" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="@+id/btn" />
        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:layout_width="446dp"
            android:layout_height="418dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="120dp"
            android:background="@drawable/layout_border_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/notif_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_no"
                    android:textColor="@color/white"
                    android:id="@+id/notification_def"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>
                <ListView
                    android:id="@+id/notif_list"
                    android:layout_width="370dp"
                    android:layout_height="350dp"
                    android:layout_marginTop="30dp">

                </ListView>
            </LinearLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>